<resources>
    <string name="app_name">安心了</string>
    <string name="account">账号</string>
    <string name="app_main_name">安心了</string>
    <string name="password">密码</string>
    <string name="register_now">立即注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登 录</string>
    <string name="login_from_others">第三方直接登录</string>
    <string name="register_account">注册账号</string>
    <string name="input_account_hint">账号（6–18位数）</string>
    <string name="reinput_password">再次填写密码</string>
    <string name="register_and_login">注册并登录</string>
    <string name="agreement_yuyi_2">《遇医协议》</string>
    <string name="agreement_yuyi_1">遇医协议</string>
    <string name="read_and_agree">我已经阅读并同意</string>
    <string name="input_password_hint">密码（可含数字、符号、18位数之内）</string>
    <string name="agreement_detail_1">一、特别提示\n二、账号注册\n三、账户安全\n四、用户声明与保证\n五、服务内容\n六、隐私保护\n七、版权申明\n八、协议的用途、更新和效力\n本协议最终所有权归属遇医APP所有，并且保留一切解释和修改的权利</string>
    <string name="agreement_detail_0">注册前请您仔细阅读以下协议：</string>
    <string name="retrieve_password">找回密码</string>
    <string name="verification_secret_question">验证密保问题</string>
    <string name="please_input_name">请输入您的真实姓名</string>
    <string name="next_step">下一步</string>
    <string name="confirm">确 定</string>
    <string name="retrieve_success">成功找回密码</string>
    <string name="skip">跳过</string>
    <string name="health_profile">健康档案</string>
    <string name="setting">设置</string>
    <string name="history">历史记录</string>
    <string name="collection">收藏夹</string>
    <string name="ai">AI</string>
    <string name="ask_content">请输入问诊内容</string>
    <string name="ask">问诊</string>
    <string name="pressed_speak">按住说话</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="note">备注</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="edit_object">编辑对象</string>
    <string name="account_security">账户与安全</string>
    <string name="switch_object">切换对象</string>
    <string name="clear_storage">清理缓存</string>
    <string name="add">添加</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="height_unit">身高（cm）</string>
    <string name="weight_unit">体重（kg）</string>
</resources>
