<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/pureWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/retrieve_password"
            android:textSize="@dimen/title_text_size" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/page_margin_top"
        android:background="@color/pureWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/page_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:gravity="center"
            android:text="@string/verification_secret_question"
            android:textColor="@color/hintGrey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_secret_answer"
            android:layout_width="@dimen/page_width"
            android:layout_height="26dp"
            android:layout_marginTop="95dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/please_input_name"
            android:textColor="@color/hintGrey"
            android:textColorHint="@color/hintGrey"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="@dimen/page_width"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_text_underline_grey" />

        <Button
            android:id="@+id/btn_next_step"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/page_width"
            android:layout_height="46dp"
            android:layout_marginTop="183dp"
            android:background="@drawable/btn_background"
            android:text="@string/next_step"
            android:textColor="@color/pureWhite"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>