<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pureWhite"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:background="@drawable/login_background"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="3dp"
                android:src="@drawable/login_avatar"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_main_name"
                android:textColor="@color/pureWhite"
                android:textSize="32sp"
                app:fontFamily="@font/hyliangpinxianj" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/account_avatar" />

                <EditText
                    android:id="@+id/edt_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/account"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="11dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/account_password" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="11dp">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/register_now"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:text="@string/forget_password"
                    android:textColor="@color/hintGrey"
                    android:textSize="14sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="290dp"
                android:layout_height="43dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/register_btn_background"
                android:text="@string/login"
                android:textColor="@color/pureWhite"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
