<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/pureWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/agreement_yuyi_1"
                android:textSize="@dimen/title_text_size" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/pureWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/page_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/agreement_detail_0"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="@dimen/page_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/agreement_detail_1"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>