<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pureWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:background="@drawable/login_background"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_scrollFlags="enterAlways">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/register_account"
                    android:textSize="@dimen/title_text_size" />
            </android.support.v7.widget.Toolbar>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/login_avatar" />
        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="@dimen/page_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/page_width"
                android:layout_height="36dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/register_tel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_account"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/input_account_hint"
                        android:inputType="text"
                        android:textColor="@color/textBlack"
                        android:textColorHint="@color/hintGrey"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/edit_text_underline_grey" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/page_width"
                android:layout_height="36dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/register_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/input_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/textBlack"
                        android:textColorHint="@color/hintGrey"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/edit_text_underline_grey" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/page_width"
                android:layout_height="36dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/register_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/reinput_password"
                        android:inputType="textPassword"
                        android:textColor="@color/textBlack"
                        android:textColorHint="@color/hintGrey"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/edit_text_underline_grey" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_register_and_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/page_width"
                android:layout_height="46dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_background"
                android:text="@string/register_and_login"
                android:textColor="@color/pureWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="@dimen/page_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="63dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_box_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:scaleX="0.7"
                    android:scaleY="0.7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_and_agree"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_yuyi_2"
                    android:textColor="@color/green"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>