<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGrey"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarDark"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/textBlack"
                app:layout_scrollFlags="enterAlways">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="编辑对象"
                    android:textColor="@color/pureWhite"
                    android:textSize="@dimen/title_text_size" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/name"
                        android:textColor="@color/textBlack" />

                    <EditText
                        android:id="@+id/edt_person_name"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/edit_text_border" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/gender"
                        android:textColor="@color/textBlack" />

                    <EditText
                        android:id="@+id/edt_person_gender"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/edit_text_border" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/age"
                        android:textColor="@color/textBlack" />

                    <EditText
                        android:id="@+id/edt_person_age"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/edit_text_border" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/birthday"
                        android:textColor="@color/textBlack" />

                    <EditText
                        android:id="@+id/edt_person_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/edit_text_border" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/note"
                        android:textColor="@color/textBlack" />

                    <EditText
                        android:id="@+id/edt_person_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/edit_text_border"
                        android:minHeight="32dp"
                        android:minLines="3" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_background_large"
                    android:text="@string/confirm"
                    android:textColor="@color/pureWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
